--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -35,6 +35,9 @@
         <li class="timeline-inverted">
           <div class="timeline-image">
             <img class="img-circle img-responsive" src="{{site.baseurl}}{{ site.timeline-img }}" alt="">
+            <div class="timeline-heading">
+              <h4>25 November 1999</h4>
+            </div>
           </div>
         </li>
       </ul>
